tests/typing/good/testfile-extends-2.scala

class A(x: Int) {}
class B extends A(42) {}
object Main { def main(args: Array[String]) { } }
