tests/typing/bad/testfile-multiple_parameters1-1.scala
class A {
    def m(x: Int, y: Int, z: Int, y: Int, t: Int) { }
}
object Main { def main(args: Array[String]) { } }
